--- a/src/Components/Styles/customToastStyles.css
+++ b/src/Components/Styles/customToastStyles.css
@@ -1,11 +1,11 @@
 /* toastStyles.css */
 
-.toast-success {
+/* .toast-success {
   background-color: #f0fdf4 !important;
   color: #15803d !important;
   border-radius: 6px !important;
   font-size: 14px;
-}
+} */
 
 .toast-info {
   background-color: #fefce8 !important;
