--- a/src/index.css
+++ b/src/index.css
@@ -37,10 +37,12 @@ body {
   margin: 0;
 }
 
-.react-pdf__Page__canvas {
+.react-pdf__Page__canvas,
+.react-pdf__Page {
   border-radius: 16px;
 }
 
-.react-pdf__Page__annotations.annotationLayer {
+.react-pdf__Page__annotations.annotationLayer,
+.react-pdf__Page__textContent.textLayer {
   display: none;
 }
