--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap");
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 * {
   font-family: "Urbanist", sans-serif !important;
   box-sizing: border-box !important;
@@ -41,10 +37,12 @@ body {
   margin: 0;
 }
 
-.react-pdf__Page__canvas {
+.react-pdf__Page__canvas,
+.react-pdf__Page {
   border-radius: 16px;
 }
 
-.react-pdf__Page__annotations.annotationLayer {
+.react-pdf__Page__annotations.annotationLayer,
+.react-pdf__Page__textContent.textLayer {
   display: none;
 }
